--- a/myinit.org
+++ b/myinit.org
@@ -46,13 +46,21 @@ Add package website to list
 
 #+END_SRC
 
-*** Quelpa-use-package
+** set UTF-8 as the default encoding
+#+BEGIN_SRC emacs-lisp
+
+(set-language-environment "UTF-8")
+(set-default-coding-systems 'utf-8)
+
+#+END_SRC
+
+** Quelpa-use-package
 #+BEGIN_SRC emacs-lisp
 
 (quelpa
  '(quelpa-use-package
    :fetcher git
-   :url "https://github.com/quelpa/quelpa-use-package.git"))
+   :url "git@github.com:quelpa/quelpa-use-package.git"))
 (require 'quelpa-use-package)
 
 #+END_SRC
@@ -435,6 +443,7 @@ goto-chg: https://www.emacswiki.org/emacs/GotoChg
 
   (use-package goto-chg
   :ensure t
+  :config (setq tab-width 4)
   :bind (("C-c g c" .  goto-last-change)
 	 ("C-c g r" . goto-last-chanage-reverse)))
 
@@ -450,14 +459,14 @@ See more: http://company-mode.github.io/
 #+BEGIN_SRC emacs-lisp
 
   (use-package company
-  :ensure t
-  :config
-  (setq company-idle-delay 0)
-  (setq company-minimum-prefix-length 3)
-  (global-company-mode t))
+    :ensure t
+    :config
+    (setq company-idle-delay 0)
+    (setq company-minimum-prefix-length 3)
+    (global-company-mode t))
 
-  (use-package company-irony
-  :ensure t)
+    (use-package company-irony
+    :ensure t)
 
 #+END_SRC
 
@@ -519,31 +528,100 @@ See more, https://github.com/joaotavora/yasnippet
 
 #+END_SRC
 
-* Elpy
-Python Plugin
-See more, https://elpy.readthedocs.io/en/latest/index.html
+* languages mode
+** lsp mode
 #+BEGIN_SRC emacs-lisp
 
-  (use-package elpy
-  :ensure t
-  :init
-  (setq python-indent-guess-indent-offset-verbose nil)
-  (setq python-shell-interpreter "python3.7"
-	python-shell-interpreter-args "-i")
-  (setq elpy-rpc-python-command "python3")
-  (elpy-enable))
-
-
+(use-package lsp-mode
+  :commands lsp
+  :diminish lsp-mode
+  :bind
+  ("M-." . 'lsp-find-definition)
+  ("M-t" . 'lsp-find-type-definition)
+  ("M-?" . 'lsp-find-references))
 
 #+END_SRC
 
-* Go mode
-Golang plugin
-See more, https://github.com/dominikh/go-mode.el
+** go mode
 #+BEGIN_SRC emacs-lisp
 
-  (use-package go-mode
-  :ensure t)
+    (use-package go-mode)
+
+#+END_SRC
+
+** rust mode
+   
+#+BEGIN_SRC emacs-lisp
+
+  (use-package rust-mode
+		:hook (rust-mode . lsp)
+		:bind
+			  ("C-c g" . rust-run)
+			  ("C-c t" . rust-test)
+			  ("C-c b" . cargo-process-build)
+			  :init
+			  (which-function-mode 1)
+			  (setq compilation-error-regexp-alist-alist
+			      (cons '(cargo "^\\([^ \n]+\\):\\([0-9]+\\):\\([0-9]+\\): \\([0-9]+\\):\\([0-9]+\\) \\(?:[Ee]rror\\|\\([Ww]arning\\)\\):" 1 (2 . 4) (3 . 5) (6))
+				compilation-error-regexp-alist-alist))
+			  :config
+			  (setq rust-format-on-save t))
+
+		      ;; Add keybindings for interacting with Cargo
+  (use-package cargo
+			:hook (rust-mode . cargo-minor-mode)
+			:diminish cargo-minor-mode)
+
+  (use-package flycheck-rust
+		      :config (add-hook 'flycheck-mode-hook #'flycheck-rust-setup))
+
+  (use-package racer
+		    :after rust-mode
+		    :diminish racer-mode
+		    :hook (rust-mode . racer-mode)
+		    :bind
+		    ("M-j" . racer-find-definition)
+		    ;; (:map racer-mode-map ("M-." . #'xref-find-definitions))
+		    (:map racer-mode-map ("M-." . nil))
+		    )
+
+
+#+END_SRC
+** toml mode
+#+BEGIN_SRC emacs-lisp
+
+(use-package toml-mode)
+
+#+END_SRC
+** eldoc mode
+#+BEGIN_SRC emacs-lisp
+
+(use-package eldoc
+  :diminish eldoc-mode)
+
+#+END_SRC
+** yaml mode
+#+BEGIN_SRC emacs-lisp
+
+(use-package yaml-mode
+  :mode (("\\.yml\\'" . yaml-mode)
+         ("\\.yaml\\'" . yaml-mode))
+  :init
+  (add-to-list 'auto-mode-alist '("\\.yml\\'" . yaml-mode)))
+
+#+END_SRC
+** markdown mode
+#+BEGIN_SRC emacs-lisp
+
+(use-package markdown-mode
+  :mode (("\\.md\\'" . markdown-mode)
+         ("\\.markdown\\'" . markdown-mode)))
+
+#+END_SRC
+** dockerfile mode
+#+BEGIN_SRC emacs-lisp
+
+(use-package dockerfile-mode)
 
 #+END_SRC
 
@@ -569,84 +647,6 @@ See more, https://magit.vc/
 
 #+END_SRC
 
-* Rust
-Rust plugin
-See more, https://github.com/rust-lang/rust-mode
-#+BEGIN_SRC emacs-lisp
-
-  (use-package rust-mode
-  :ensure t
-  :config
-  (setq tab-width 4))
-
-  (use-package racer
-  :ensure t)
-
-#+END_SRC
-
-* Yaml mode
-Yaml plugin
-See more, https://github.com/yoshiki/yaml-mode
-#+BEGIN_SRC emacs-lisp
-
-  (use-package yaml-mode
-  :ensure t)
-
-#+END_SRC
-
-* Web mode
-HTML, CSS, Javascript plugin
-See more, http://web-mode.org/
-#+BEGIN_SRC emacs-lisp
-
-  (use-package web-mode
-  :ensure t
-  :config
-  (progn
-  (add-to-list 'auto-mode-alist '("\\.phtml\\'" . web-mode))
-  (add-to-list 'auto-mode-alist '("\\.tpl\\.php\\'" . web-mode))
-  (add-to-list 'auto-mode-alist '("\\.[agj]sp\\'" . web-mode))
-  (add-to-list 'auto-mode-alist '("\\.as[cp]x\\'" . web-mode))
-  (add-to-list 'auto-mode-alist '("\\.erb\\'" . web-mode))
-  (add-to-list 'auto-mode-alist '("\\.mustache\\'" . web-mode))
-  (add-to-list 'auto-mode-alist '("\\.djhtml\\'" . web-mode))
-
-  (setq web-mode-ac-sources-alist
-    '(("php" . (ac-source-yasnippet ac-source-php-auto-yasnippets))
-      ("html" . (ac-source-emmet-html-aliases ac-source-emmet-html-snippets))
-      ("css" . (ac-source-css-property ac-source-emmet-css-snippets))))
-
-  (add-hook 'web-mode-before-auto-complete-hooks
-	    '(lambda ()
-	       (let ((web-mode-cur-language
-		      (web-mode-language-at-pos)))
-		 (if (string= web-mode-cur-language "php")
-		     (yas-activate-extra-mode 'php-mode)
-		   (yas-deactivate-extra-mode 'php-mode))
-		 (if (string= web-mode-cur-language "css")
-		     (setq emmet-use-css-transform t)
-		   (setq emment-use-css-transform nil)))))
-  ))
-
-#+END_SRC
-
-* Markdown mode
-Markdown plugin
-See more, https://github.com/defunkt/markdown-mode
-#+BEGIN_SRC emacs-lisp
-
-  ;; Should install pandoc first
-  ;; For mac, brew install pandoc
-  (use-package markdown-mode
-    :ensure t
-    :commands (markdown-mode gfm-mode)
-    :mode (("README\\.md\\'" . gfm-mode)
-	   ("\\.md\\'" . markdown-mode)
-	   ("\\.markdown\\'" . markdown-mode))
-    :init (setq markdown-command "pandoc"))
-
-#+END_SRC
-
 * Auctex
 TeX plugin
 See more, https://www.gnu.org/software/auctex/
@@ -656,9 +656,7 @@ See more, https://www.gnu.org/software/auctex/
   :defer t
   :ensure auctex
   :config
-  (setq TeX-auto-save t)
-
-  )
+  (setq TeX-auto-save t))
 
 #+END_SRC
 
@@ -683,71 +681,35 @@ See more, https://github.com/Sarcasm/irony-mode
 
 #+END_SRC
 
-* Meghanada mode
-Java environment
-See more, https://github.com/mopemope/meghanada-emacs
-#+BEGIN_SRC emacs-lisp
-
-  (use-package meghanada
-  :ensure t
-  :config
-  (progn
-    (add-hook 'java-mode-hook
-      (lambda ()
-	;; meghanada-mode on
-	(meghanada-mode t)
-	;; enable telemetry
-	(meghanada-telemetry-enable t)
-	(flycheck-mode +1)
-	(setq c-basic-offset 2)
-	;; use code format
-	(add-hook 'before-save-hook 'meghanada-code-beautify-before-save)))
-  ))
-
-#+END_SRC
-
-* Php mode
-A powerful and flexible Emacs major mode for editing PHP scripts
-See more, https://github.com/emacs-php/php-mode
-#+BEGIN_SRC emacs-lisp
-
-  (use-package php-mode
-  :ensure t
-  :config
-  (progn 
-    (setq tab-width 4)
-    (add-hook 'php-mode-hook 'php-enable-default-coding-style)
-    (add-hook 'php-mode-hook (lambda () (subword-mode 1)))
-    (with-eval-after-load 'php-mode
-      (define-key php-mode-map (kbd "C-c C--") 'php-current-class)
-      (define-key php-mode-map (kbd "C-c C-=") 'php-current-namespace))
-  ))
-
-#+END_SRC
-
-* Docker
-Docker mode
-See more, https://github.com/Silex/docker.el
-#+BEGIN_SRC emacs-lisp
-
-  (use-package docker
-  :ensure t
-  :bind ("C-c d" . docker))
-
-  (use-package dockerfile-mode
-  :ensure t
-  :config
-  (add-to-list 'auto-mode-alist '("Dockerfile\\'" . dockerfile-mode))
-  )
-
-#+END_SRC
-
 * helm
 helm mode
 See more, https://github.com/emacs-helm/helm
 #+BEGIN_SRC emacs-lisp
 
+(use-package ag)
 
+(use-package helm-ag
+  :after ag)
+
+(use-package helm-projectile
+  :after helm
+  :config
+  (helm-projectile-on))
+
+(use-package diminish)
+
+(use-package helm
+  :diminish helm-mode
+  :init
+  (require 'helm-config)
+  :bind
+  ("C-c f" . helm-projectile-find-file-dwim)
+  ("M-x" . helm-M-x)
+  ("C-x r b" . helm-filtered-bookmarks)
+  ("C-x C-f" . helm-find-files)
+  :init
+  (helm-mode 1)
+  (customize-set-variable 'helm-ff-lynx-style-map t))
 
 #+END_SRC
 
@@ -802,4 +764,5 @@ see more, https://github.com/purcell/default-text-scale
       ("M-_" . default-text-scale-decrease))
 
 #+END_SRC
+
 
