--- a/myinit.org
+++ b/myinit.org
@@ -633,16 +633,17 @@ See more, https://magit.vc/
   (use-package magit
   :ensure t
   :bind (
-    ("C-c m c" . magit-commit)
-    ("C-c m p" . magit-push)
-    ("C-c m l" . magit-log)
-    ("C-c m n" . magit-clone)
-    ("C-c m b" . magit-branch-create)
-    ("C-c m d" . magit-branch-delete)
-    ("C-c m r" . magit-branch-reset)
-    ("C-c m o" . magit-checkout)
-    ("C-c m s" . magit-stash)
-    ("C-c m g" . magit-status)
+    ("C-c x c" . magit-commit)
+    ("C-c x p" . magit-push)
+    ("C-c x l" . magit-log)
+    ("C-c x n" . magit-clone)
+    ("C-c x b" . magit-branch-create)
+    ("C-c x d" . magit-branch-delete)
+    ("C-c x r" . magit-branch-reset)
+    ("C-c x o" . magit-checkout)
+    ("C-c x s" . magit-stash)
+    ("C-c x g" . magit-status)
+    ("C-c x u" . magit-pull)
   ))
 
 #+END_SRC
