--- a/myinit.org
+++ b/myinit.org
@@ -765,5 +765,12 @@ see more, https://github.com/purcell/default-text-scale
       ("M-_" . default-text-scale-decrease))
 
 #+END_SRC
-
-
+* editorconfig
+editor format plugin
+see more, https://github.com/editorconfig/editorconfig-emacs
+#+BEGIN_SRC emacs-lisp
+(use-package editorconfig
+  :ensure t
+  :config
+  (editorconfig-mode 1))
+#+END_SRC
